CATTY-643 Show warning for downloaded project that contains Web request bricks

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -2192,6 +2192,9 @@
 "The name contains blocked characters. Please try again!" = "The name contains blocked characters. Please try again!";
 
 /* No comment provided by engineer. */
+"The project you have downloaded uses a \"Send web request\", \"Get image from\" or \"Open in browser\" brick, which can send your data to the internet. This may be harmless, and necessary for its intended behavior. In any case, please be cautious about what data you provide, as it may be misused. In case of any doubt, please delete the downloaded project. You shall also report the project on its page on the Catrobat community platform in case you are sure that it is harmful." = "The project you have downloaded uses a \"Send web request\", \"Get image from\" or \"Open in browser\" brick, which can send your data to the internet. This may be harmless, and necessary for its intended behavior. In any case, please be cautious about what data you provide, as it may be misused. In case of any doubt, please delete the downloaded project. You shall also report the project on its page on the Catrobat community platform in case you are sure that it is harmful.";
+
+/* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "The recent projects cannot be loaded";
 
 /* No comment provided by engineer. */
@@ -2409,6 +2412,9 @@
 
 /* No comment provided by engineer. */
 "Wait until" = "Wait until";
+
+/* No comment provided by engineer. */
+"Warning" = "Warning";
 
 /* No comment provided by engineer. */
 "We" = "We";
