--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -2090,6 +2090,9 @@
 "Stitch" = "Stitch";
 
 /* No comment provided by engineer. */
+"Stop" = "Stop";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "Stop all sounds";
 
 /* No comment provided by engineer. */
