--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1304,6 +1304,9 @@
 "Move Phiro motor forward" = "Move Phiro motor forward";
 
 /* No comment provided by engineer. */
+"Move script" = "Move script";
+
+/* No comment provided by engineer. */
 "Move sounds" = "Move sounds";
 
 /* No comment provided by engineer. */
