--- a/src/Catty/Resources/Localization/en-AU.lproj/InfoPlist.strings
+++ b/src/Catty/Resources/Localization/en-AU.lproj/InfoPlist.strings
@@ -1,7 +1,22 @@
-/* 
-  InfoPlist.strings
-  Catty
-
-  Created by David Url on 01.01.23.
-  
-*/
+CFBundleDevelopmentRegion = "English";
+CFBundleTypeName = "Catrobat Program";
+LSHandlerRank = "Owner";
+CFBundleInfoDictionaryVersion = "6.0";
+CFBundlePackageType = "APPL";
+CFBundleSignature = "????";
+CatrobatApplicationName = "Pocket Code (Catty iOS)";
+CatrobatBuildName = "Catty";
+CatrobatLanguageVersion = "0.9993";
+CatrobatPlatformName = "iOS";
+NSBluetoothAlwaysUsageDescription = "Communicate with your Arduino device using Bluetooth.";
+NSBluetoothPeripheralUsageDescription = "Communicate with your Arduino device using Bluetooth.";
+NSCameraUsageDescription = "Import pictures from your device camera to use as Look or Background.";
+NSLocationWhenInUseUsageDescription = "This program is requesting access to your location.";
+NSMicrophoneUsageDescription = "Record your own sounds or use the microphone for screen recording.";
+NSPhotoLibraryUsageDescription = "Import pictures from your Photo Library to use as Look or Background.";
+UILaunchStoryboardName = "LaunchScreen";
+UIMainStoryboardFile = "iPhone";
+UIStatusBarStyle = "UIStatusBarStyleLightContent";
+UIUserInterfaceStyle = "Light";
+UTTypeDescription = "Catrobat Program";
+UTTypeIdentifier = "org.catrobat.pocketcode.catrobat";
